Ensure html tables are aligned correctly

--- a/app/styles/components/layout/blocks.scss
+++ b/app/styles/components/layout/blocks.scss
@@ -40,13 +40,25 @@ layout-blocks {
 			}
 
 			table > thead > tr > th {
+
 				padding:15px;
 				border-bottom:1px solid var(--border-color);
+
+				&:not([align]) {
+					text-align:left;
+				}
+
 			}
 
 			table > tbody > tr > td {
+
 				padding:15px;
 				border-bottom:1px solid var(--border-color);
+
+				&:not([align]) {
+					text-align:left;
+				}
+
 			}
 
 		}
